# argentum

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  coverage.json  pyproject.toml  shakedown-policy.md
.codacy/: codacy.yaml
argentum/: __init__.py  cli.py  cli_utils.py  models.py
argentum/agents/: __init__.py  base.py  llm_agent.py
argentum/audio/: __init__.py  controller.py  elevenlabs_controller.py  factory.py
argentum/commands/: advisory.py  auction.py  debate.py  project.py
argentum/coordination/: __init__.py  auction_manager.py  chat_manager.py
argentum/knowledge/: document_store.py
argentum/llm/: __init__.py  provider.py
argentum/memory/: __init__.py  agent_memory.py  context.py
argentum/orchestration/: __init__.py  auction_chat.py  base.py  concurrent.py  group_chat.py  sequential.py
argentum/persistence/: __init__.py  serializer.py  session.py  storage.py
argentum/scenarios/: __init__.py  advisory.py  debate.py
argentum/tts/: __init__.py  elevenlabs_adapter.py
argentum/workspace/: __init__.py  knowledge.py  manager.py  profiles.py  summarization.py  warm_store.py
argentum/workspace/templates/: __init__.py
docs/: CLI_REFACTOR.md  ENGINEERING_STATUS_SELF.md  IMPLEMENTATION_STATUS.md  ORGANIC_AUCTION_CHAT_PLAN.md  ORGANIC_AUCTION_IMPLEMENTATION_PLAN.md  ORGANIC_AUCTION_STATUS.md  PERSISTENCE_RAG_PLAN.md  PERSISTENT_PROJECT_WORKSPACES.md  PROPOSAL_EVALUATION.md  QUICKSTART.md
examples/: README_LOCAL_LLMS.md  cto_panel.py  local_llm_example.py  minister_debate.py  pipeline_demo.py  two_actor_retrieval_demo.py
examples/demo_workspace/two-actor-demo/: project.json
examples/demo_workspace/two-actor-demo/docs/: carbon-briefing.md
examples/demo_workspace/two-actor-demo/knowledge/docs/: chunks.jsonl  documents.jsonl
examples/demo_workspace/two-actor-demo/sessions/two-actor-demo/: highlights.json  two-actor-demo.json
tests/: conftest.py  test_agents.py  test_auction_enhanced.py  test_auction_interrupt.py  test_auction_metadata.py  test_auction_orchestrator.py  test_auction_simple.py  test_audio_elevenlabs.py  test_audio_factory.py  test_cli_docs.py  test_cli_profiles.py  test_cli_retention.py  test_cli_search.py  test_cli_session.py  test_coordination.py  test_document_store.py  test_emotion_interjection.py  test_group_chat.py  test_interrupt_readiness.py  test_knowledge.py  test_llm_agent.py  test_memory.py  test_orchestration.py  test_persistence.py  test_profiles.py  test_summarization.py  test_workspace.py
tmp_ws/policy-show/: project.json
tmp_ws/policy-show/sessions/session-1/: transcript.json
tmp_ws2/policy-show/: project.json
workspace/gameshow/: project.json  timeline.jsonl
workspace/gameshow/agents/defense/: profile.json
workspace/gameshow/agents/education/: profile.json
workspace/gameshow/agents/environment/: profile.json
workspace/gameshow/agents/finance/: profile.json
workspace/gameshow/agents/harper/: profile.json
workspace/gameshow/agents/health/: profile.json
workspace/gameshow/agents/jordan/: profile.json
workspace/gameshow/agents/memory/: harper.json  jordan.json  miguel.json  priya.json  sasha.json
workspace/gameshow/agents/miguel/: profile.json
workspace/gameshow/agents/priya/: profile.json
workspace/gameshow/agents/sasha/: profile.json
workspace/gameshow/knowledge/: edges.jsonl  nodes.jsonl
workspace/gameshow/sessions/fav-games/: highlights.json  transcript.json
workspace/gameshow/sessions/fav-games-2/: highlights.json  transcript.json
workspace/gameshow/sessions/fav-games-frontier/: fav-games-frontier.json  highlights.json
workspace/gameshow/sessions/fav-games-frontier-v2/: highlights.json  transcript.json
workspace/shakedown/: project.json  timeline.jsonl
workspace/shakedown/agents/environment/: profile.json
workspace/shakedown/agents/finance/: profile.json
workspace/shakedown/agents/memory/: minister_of_environment.json  minister_of_finance.json
workspace/shakedown/knowledge/: edges.jsonl  nodes.jsonl
workspace/shakedown/knowledge/docs/: chunks.jsonl  documents.jsonl
workspace/shakedown/sessions/20251018-073804-should-we-increase-the-carbon-tax/: highlights.json  transcript.json
workspace/shakedown/sessions/carbon-shakedown/: highlights.json  transcript.json
workspace/shakedown/sessions/carbon-shakedown2/: carbon-shakedown2.json  highlights.json
